Doc: QDataStream doc example

Updated the example description

Fixes: QTBUG-123035
Change-Id: I3dc953b02297e6e6bd9aecbc2e8831f13cf48715
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
(cherry picked from commit 210063a3cfcbe5fa9506ea14fd27787765ae2e9b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>